umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_1,1-dimethylhydrazine.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Ce
    atoms:
      - "C#h3#v"
      - "N#n#v3"
      - "C#h3#v"
      - "N#h2#n#v"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Ce
    atoms:
      - "C#h3#v"
      - "N#n#v3"
      - "C#h3#v"
      - "N#h2#n#v"
    bonds:
      - "-"
      - "-"
      - "-"
