umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_1,2-dichloroethane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "Cl#n3#v"
      - "C#h2#v2"
      - "C#h2#v2"
      - "Cl#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "Cl#n3#v"
      - "C#h2#v2"
      - "C#h2#v2"
      - "Cl#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
