umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_1-chloro-2-hydroxyethane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "{Cl/3v1}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{OH/2v1}"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "{Cl/3v1}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{OH/2v1}"
    bonds:
      - "-"
      - "-"
      - "-"
