umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_2,2-dimethylpropan-2-ol.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: Db_
    atoms:
      - "C#h3#v"
      - "C#v4"
      - "C#h3#v"
      - "C#h3#v"
      - "O#h#n2#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: Db_
    atoms:
      - "C#h3#v"
      - "C#v4"
      - "C#h3#v"
      - "C#h3#v"
      - "O#h#n2#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
