umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_butan-2-ol.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaW
    atoms:
      - "{CH3v1}"
      - "{CH2v2}"
      - "{CHv3}"
      - "{CH3v1}"
      - "{OH/2v1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaW
    atoms:
      - "{CH3v1}"
      - "{CH2v2}"
      - "{CHv3}"
      - "{CH3v1}"
      - "{OH/2v1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
