umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_carbon-tetrachloride.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: "D{?"
    atoms:
      - "C#v4"
      - "Cl#n3#v"
      - "Cl#n3#v"
      - "Cl#n3#v"
      - "Cl#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: "D{?"
    atoms:
      - "C#v4"
      - "Cl#n3#v"
      - "Cl#n3#v"
      - "Cl#n3#v"
      - "Cl#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
